fixes a bug in the RootLoader which prevented him from finding resources on the given classpath. Resolvevisitor now no longer marks a precompiled class with missing parent class as "not found" which results in the open bug GROOVY-1257, but allows us to see a correct error message. GCL will now create a File and use it's toURI().toURL() mechanism to ensure possible missing trailing slashes are there where they should be.
git-svn-id: http://svn.codehaus.org/groovy/trunk@3674 a5544e8c-8a19-0410-ba12-f9af4593a198